--- a/games/SpaceShip/CMakeLists.txt
+++ b/games/SpaceShip/CMakeLists.txt
@@ -33,7 +33,9 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Renderer.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Vector2D.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/PositionComponent.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/Timer.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/Timer.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/RenderQueue.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/MeshComponent.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
@@ -53,7 +55,9 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Renderer.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Vector2D.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/PositionComponent.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/Timer.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/Timer.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/RenderQueue.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/MeshComponent.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
