Added character class. Fixed adding game object components.

--- a/games/SpaceShip/CMakeLists.txt
+++ b/games/SpaceShip/CMakeLists.txt
@@ -35,7 +35,8 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/PositionComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Timer.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/RenderQueue.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/MeshComponent.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/MeshComponent.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/Character.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
@@ -57,7 +58,8 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/PositionComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Timer.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/RenderQueue.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/MeshComponent.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/MeshComponent.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/Character.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
