--- a/games/SpaceShip/CMakeLists.txt
+++ b/games/SpaceShip/CMakeLists.txt
@@ -34,12 +34,12 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Vector2D.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/PositionComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Timer.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/RenderQueue.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/MeshComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Character.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/ScaleComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/RotationComponent.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/PlayerController.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/PlayerController.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/MoveComponent.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
@@ -60,12 +60,12 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Vector2D.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/PositionComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Timer.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/RenderQueue.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/MeshComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Character.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ScaleComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/RotationComponent.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/PlayerController.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/PlayerController.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/MoveComponent.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
