Try fix windows build v4

--- a/games/SpaceShip/CMakeLists.txt
+++ b/games/SpaceShip/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SFML_STATIC_LIBRARIES TRUE)
 include(ExternalProject)
 
 if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
-    set(BUILD_COMMAND "generic")
+    set(BUILD_COMMAND "mingw")
 elseif(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Darwin")
     set(BUILD_COMMAND "macosx")
 else()
@@ -73,7 +73,8 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/MoveComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/PhysicComponent.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Physic.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/QuadTree.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/QuadTree.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/Objective.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
@@ -102,7 +103,8 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/MoveComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/PhysicComponent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/Physic.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/QuadTree.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/QuadTree.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/Objective.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
