Start working on shell game state

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -62,7 +62,9 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/ScriptSubSystem.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/ScriptManager.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/MissionGameStateScriptBuilder.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/InputListenerComponent.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/InputListenerComponent.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/FileSystemHelper.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/Global.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/InputEvent.hpp
@@ -104,7 +106,9 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/IScriptBuilder.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/ScriptSubSystem.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/ScriptManager.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/MissionGameStateScriptBuilder.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/MissionGameStateScriptBuilder.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/FileSystemHelper.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/SpawnGameObject.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
