Added asteroid spawner

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -67,7 +67,8 @@ set(sources_files ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Global.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Projectile.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/sources/Weapon.cpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/WeaponComponent.cpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/WeaponComponent.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/sources/AsteroidSpawner.cpp)
 source_group("Source Files\\game" FILES ${sources_files})
 
 set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/InputEvent.hpp
@@ -115,7 +116,8 @@ set(headers_files ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/InputEvent.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/SpawnGameObject.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/Projectile.hpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/Weapon.hpp
-                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/WeaponComponent.hpp)
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/WeaponComponent.hpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/include/ssg/AsteroidSpawner.hpp)
 source_group("Header Files\\game" FILES ${headers_files})
 
 add_executable(${PROJECT_NAME} ${headers_files} ${sources_files})
